json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,116 @@
 {
  "items": [
   {
+    "id": "Bq7DywZPQlG8vyxdiscsWQ",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "jobmote",
+    "url": "http://jobmote.com/jobs/11272-technical-instructor-trainer-contract-remote",
+    "title": "Technical Instructor/Trainer (contract) - Remote",
+    "content": "Technical Instructor/Trainer (contract) - Remote - Jobmote<div><div><h2>Technical Instructor/Trainer (contract) - Remote</h2><h5>MBO Partners</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Contract duration: 2 years (anticipate end of December 29, 2019)</strong></p><p><strong>Contract rate: negotiable</strong></p><p><strong>Location: open for any location; remote - yes</strong></p><p>We are currently looking fora <strong>Technical Instructor</strong> for our Desigo CC training classes to be delivered to customers. Instructor would follow BT Universities certification process for classes. The instructor would travel 2-3 weeks per month during peak times (March - November) Less in November - February. 100% travel, mostly in the US. </p><p><strong>Responsibilities:</strong></p><ul><li>Delivers learning solutions in both classroom (12 student class sizes) and electronic environments assisting internal employees and external customers to achieve specific learning objectives.</li><li>Test product functionality in course training exercises for revised course materials to accommodate new software and hardware functionality. </li><li>Maintains expertise on knowledge of service strategies, design engineering, installation, startup and troubleshooting techniques</li><li>Tests usability, product functionality and becomes a company expert on new products. </li><li>Setup and pack up equipment for courses of instruction. Need to be able to lift up to 50 lbs.</li><li>Reporting, tracking and completing preventative and corrective maintenance on assigned products.</li></ul><p><strong>Required Experience:</strong></p><ul><li>Two to five years in a related field position or successful experience in a comparable training role.</li><li>Demonstrated proficiency in instructional techniques and course development utilizing a wide range of media and learning strategies</li><li>Strong platform skills and written communication skills with the ability to effectively communicate with employees at all levels. </li></ul><p><strong>Preferred background and skill set:</strong></p><ul><li>Building Automation Engineering experience</li><li>Navel Nuclear experience</li><li>Electrical or Mechanical Engineering experience</li><li>Plus teaching experience</li><li>Must have valid driver's license</li></ul><p></p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>",
+    "urlFetchPending": false,
+    "published": "May 24, 2018 3:20:44 PM",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:less/frontend/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ]
+  },
+  {
+    "id": "zsYVbNeUTuGOlzkdnp2Jvw",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "jobmote",
+    "url": "http://jobmote.com/jobs/11126-technical-instructor-trainer-contract-remote",
+    "title": "Technical Instructor/Trainer (contract) - Remote",
+    "content": "Technical Instructor/Trainer (contract) - Remote - Jobmote<div><div><h2>Technical Instructor/Trainer (contract) - Remote</h2><h5>MBO Partners</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Contract duration: 2 years (anticipate end of December 29, 2019)</strong></p><p><strong>Contract rate: negotiable</strong></p><p><strong>Location: open for any location; remote - yes</strong></p><p>We are currently looking fora <strong>Technical Instructor</strong> for our Desigo CC training classes to be delivered to customers. Instructor would follow BT Universities certification process for classes. The instructor would travel 2-3 weeks per month during peak times (March - November) Less in November - February. 100% travel, mostly in the US. </p><p><strong>Responsibilities:</strong></p><ul><li>Delivers learning solutions in both classroom (12 student class sizes) and electronic environments assisting internal employees and external customers to achieve specific learning objectives.</li><li>Test product functionality in course training exercises for revised course materials to accommodate new software and hardware functionality. </li><li>Maintains expertise on knowledge of service strategies, design engineering, installation, startup and troubleshooting techniques</li><li>Tests usability, product functionality and becomes a company expert on new products. </li><li>Setup and pack up equipment for courses of instruction. Need to be able to lift up to 50 lbs.</li><li>Reporting, tracking and completing preventative and corrective maintenance on assigned products.</li></ul><p><strong>Required Experience:</strong></p><ul><li>Two to five years in a related field position or successful experience in a comparable training role.</li><li>Demonstrated proficiency in instructional techniques and course development utilizing a wide range of media and learning strategies</li><li>Strong platform skills and written communication skills with the ability to effectively communicate with employees at all levels. </li></ul><p><strong>Preferred background and skill set:</strong></p><ul><li>Building Automation Engineering experience</li><li>Navel Nuclear experience</li><li>Electrical or Mechanical Engineering experience</li><li>Plus teaching experience</li><li>Must have valid driver's license</li></ul><p></p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>",
+    "urlFetchPending": false,
+    "published": "May 23, 2018 1:20:51 PM",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:less/frontend/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ]
+  },
+  {
+    "id": "UUjPY7DsSfqzTKMawmONIw",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "workinstartups-sales",
+    "url": "http://workinstartups.com/job-board/job/69297/b2b-email-copy-rockstar-at-taskeater/",
+    "title": "B2B Email Copy Rockstar",
+    "content": "B2B Email Copy Rockstar <br />Location: Remote working <br />Part Time - Temp to Perm<br />Salary: £12-25 per hour based on experience<br /> <br />We are looking for an outbound email rockstar, who knows what it takes to engage with B2B businesses. <br /> <br />Company Summary:<br />Taskeater help companies grow their sales. We source qualify and develop new sales prospects for clients, improving outbound sales activity and driving new business.  Services include lead sourcing, database management and LinkedIn selling. We are looking to grow our team and a deliver good quality copy is key to what we do. <br /><br />Responsibilities:<br />* Writing copy for outbound sales emails<br />* Incorporating feedback from client and account managers into copy to optimise results<br />* Understand client services USP’s and objectives<br /> <br />Ideal Candidate:<br />* Experience in B2B copywriting for outbound and lead nurture <br />* Ability to have an excellent understanding of varying brands<br />* Knowledge of content marketing for lead generation and client nurture/education<br /><br />Advantages of working with us<br />* High energy startup culture with room for innovative ideas and business projects<br />* Working directly with the Managing Director who has experience training and growing successful sales teams<br />* Networking opportunities with the fast-growing startup community in London and our 200+ current clients<br />* International and close-knit team<br /><br />If you think you’re the right person for this role and want to be a part of a company you can grow with, then please contact us. We look forward to hearing from you!<br />",
+    "urlFetchPending": false,
+    "published": "May 23, 2018 12:54:41 PM",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ]
+  },
+  {
+    "id": "hZSUU9VPRhOoqHIeIx-wJg",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "jobmote",
+    "url": "http://jobmote.com/jobs/11101-sap-successfactors-employee-central-consultant-virtual-remote",
+    "title": "SAP SuccessFactors Employee Central Consultant-Virtual/Remote",
+    "content": "SAP SuccessFactors Employee Central Consultant-Virtual/Remote - Jobmote<div><div><h2>SAP SuccessFactors Employee Central Consultant-Virtual/Remote</h2><h5>Cross Solutions, LLC</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p>The Employee Central consultant is responsible for serving as a key consultant; helping clients achieve their desired results by assisting them in making critical decisions regarding the configuration of their system and providing recommendations on how clients can best utilize their Success Factors Employee Central system and working closely with the project team to support the implementation. Employee Central consultants work with external clients and internal teams to provide quality solutions.</p><p><strong>Must be a U.S. Citizen</strong></p><p><strong>Expected Travel:</strong> 0 - 10%<br><strong>Career Status:</strong> Professional<br><strong>Employment Type:</strong> Regular Full Time</p><p><strong>ROLE</strong> <strong>DESCRIPTION:</strong></p><ul><li>Possess and demonstrate deep expertise in SuccessFactors product implementations on global and complex enterprise implementations-known as an industry expert.</li><li>Apply expert level mastery of SuccessFactors HCM product suite knowledge across products, including but not limited to: Foundation and Employee Central</li><li>Configure SuccessFactors Platform/Foundation and setup Role Based Permissions (RBP)</li><li>Use professional concepts in developing resolution to critical issues</li><li>Present prescriptive leading practices</li><li>Support project escalations</li><li>Support pre-sales activities (license and consulting)</li><li>Identify and apply Integrated Service Delivery options</li><li>Application specific solution consulting (for a specific application: creation of business</li><li>Provide prescriptive guidance on configuration workbook completion and creation of test cases</li><li>Scheduling and execution, key user training, go live support, and post go live support</li><li>Performance of feasibility studies / solution reviews</li><li>Conducting requirement gathering workshops &amp; trainings</li><li>Industry /corporate process implementation across all related applications (SAP/non-SAP)</li><li>Develop and assure quality of process models</li><li>Demonstrate basic knowledge of modeling standards and tools</li></ul><p><strong>EXPECTATIONS AND</strong> <strong>TASKS:</strong></p><ul><li>Work on issues that impact design/selling success or enterprise implementation and deployment of highly referenceable customers</li><li>Use expertise to address future concepts, products or technologies</li><li>Create formal networks with key decision makers and serve as an external spokesperson for the organization</li><li>Maintain expert level knowledge of SuccessFactors HCM suite through training and project work</li><li>Collaborate and drive strategy recommendations for sales process, product development and partners with key functional teams to set product future objectives</li><li>Demonstrate leadership in given product(s) space</li><li>Relied upon for larger public sector efforts, publications, cross functional strategy and alignment of business processes for ongoing success for customers and SAP SuccessFactors</li><li>Provide detailed planning of process implementation</li><li>Apply industry process methodology across all related applications (SAP/non-SAP)</li><li>Take over responsibility from time-to-time as a sub project team lead</li><li>Take responsibility from time-to-time as team lead and support respective manager(s) in consultant development tasks</li><li>Apply general HR business process, software and related technical knowledge to support implementations</li><li>Educate customer on employee data and technical requirements</li><li>Facilitate technical requirements gathering sessions with customer business and technical liaisons to define possible customizations, interfaces and data conversion requirements</li><li>Setup related interfaces and data integrations</li><li>Create test cases from business and technical requirements</li><li>Manage project plan, issues log, and all project-related documentation for smaller projects and support Project Manager with these tasks on larger projects</li><li>Provide training to customer resources to prepare them for production support</li><li>Support Go Live and Post Go Live efforts</li><li>Perform feasibility studies / solution reviews</li></ul><p><strong>WORK EXPERIENCE:</strong></p><ul><li>Typically requires a minimum of 10+ years of related experience.</li><li>Minimum three years consulting experience in SuccessFactors application.</li><li>Prior experience supporting U.S. Government customers preferred.</li><li>Has experience with minimum of 5 full cycle implementations</li><li>Deep understanding of industry specific business processes</li><li>Has managed difficult client situations</li><li>Acted as a coach or mentor for colleagues</li><li>Demonstrated knowledge and experience in requirements gathering and development.</li><li>Strong verbal and written communication skills with the ability to serve as an intermediary between technical developers and end users</li><li>Expert analytical and problem solving skills. Ability to define problems, collect data, establish facts, and draw valid conclusions.</li><li>Ability to deal with complex customer service issues using diplomacy, professionalism, and tact.</li><li>Ability to create positive and professional business relationships with internal and external clients.</li><li>Experience &amp; knowledge on SuccessFactors solution - Employee Central and/or Talent modules</li><li>Certified in at least one SuccessFactors module</li><li>At least five end to end implementation experience in SuccessFactors</li><li>SAP SuccessFactors Activate Cloud methodology experience</li><li>HR Business Processes</li><li>SF Integration knowledge would be a plus</li><li>EC Payroll experience &amp; skills would be a plus</li></ul><p><strong>EDUCATION AND QUALIFICATION / SKILLS AND COMPETENCIES</strong> :</p><ul><li>US Citizenship and the ability to obtain a security clearance required</li><li>SuccessFactors Certification</li><li>University degree or equivalent work experience</li><li>English: Fluent</li><li>Experience with government regulations and compliance guidelines, including but not limited to Accessibility Compliance / Section 508 Compliance preferred</li><li>Knowledge of the full software development life cycle</li><li>Demonstrated experience with MS Word, Visio, Excel and MS Project</li><li>Knowledge of XML or HTML preferred.</li></ul><p>Company DescriptionCross Solutions is a premiere provider of Technology resources and services. We are comprised of experts, who have industry knowledge to help guide strategic decisions as well as the skills to get the job done. </p><p>We partner with our clients to understand their needs, work environment, corporate culture and provide the individuals who will complement their existing team. Let Cross Solutions find the right job for you!</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>",
+    "urlFetchPending": false,
+    "published": "May 23, 2018 6:20:28 AM",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:go/go/12",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=12, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ]
+  },
+  {
     "id": "i3cGeIkNROOQ02IDz02o0g",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
