json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,36 @@
 {
  "items": [
   {
+    "id": "ohcOKQwXTmG938LKAm7GTg",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "jobmote",
+    "url": "http://jobmote.com/jobs/11338-senior-salesforce-consultant-engagement-manager-remote-position",
+    "title": "Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION)",
+    "content": "Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION) - Jobmote<div><div><h2>Senior Salesforce Consultant / Engagement Manager (REMOTE POSITION)</h2><h5>Zennify</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p>Zennify is looking for a qualified candidate to join their team as a Senior Salesforce Consultant with a strong Financial Services Background. The individual will be responsible for managing strategic engagements with clients, including designing and delivering scalable solutions using Salesforce.com and other cloud-based technologies. The individual will work with a team to implement mid- and large-scale customer projects encompassing process analysis &amp; design, system requirements &amp; configuration, change management, training and deployment. Clients range from local, small and mid-sized companies to multi-national enterprise corporations and state and federal agencies.</p><p><strong>THIS IS A REMOTE POSITION.</strong> Zennify is headquartered in Boise, ID with another office located in Sacramento, CA. Working remote, candidates need to be prepared for up to 30% travel to both headquarters and client locations. Current clients are located in the West.</p><p>Must be eligible to work in the US as we are not currently sponsoring visas.</p><p><strong>Responsibilities</strong></p><p>· Lead delivery teams to execute all project implementation phases including project planning, requirements gathering, solution design, development, system and user testing, deployment, training and post go live support</p><p>· Manage customer relationships and day-to-day interactions &amp; escalations</p><p>· Oversee process driven customer conversations and workshops related to sales processes, customer service, marketing automation and operational processes</p><p>· Define project short and long-term goals, identify success criteria, and coordinate client and delivery resource roles and responsibilities</p><p>· Drive delivery teams to produce on­-time, high quality, scalable and suitable services and deliverables</p><p>· Contribute to pre-sales customer scoping sessions with the Business Development Team &amp; assist with project proposal development</p><p>· Contribute to a collaborative team environment by encouraging and leading solution brainstorming, internal knowledge sharing and skill development</p><p><strong>Qualities of the Ideal Candidate</strong></p><ul><li>Thrives in a team-based, high energy and fast-paced environment</li><li>Service-oriented and innately driven to produce outstanding customer satisfaction and results</li><li>Enjoys discovering, learning about and implementing new technologies</li><li>Analytical and prone to logically and methodically work through problems</li><li>Strong aptitude for prioritization and multi-tasking in a deadline-driven environment</li><li>A positive demeanor with exceptional interpersonal skills with respect to internal and external interactions and relationships</li><li>Ability to meet travel requirements, when applicable (no more than 20% travel expected)</li><li>A desire to proactively contribute to, and enhance, team outputs</li><li>Experience working in Financial Services or Banking</li><li>Working knowledge of integration software such as Mulesoft, Jitterbit, Informatica</li></ul><p><strong>Preferred Qualifications</strong></p><ul><li>One or more of the following Salesforce Certifications: Sales Cloud Consultant, Service Cloud Consultant, Community Cloud Consultant, Financial Services Cloud Accredidation</li><li>Strong Financial Services background</li><li>Experience working with one or more of the following platforms: Ncino, Core Logic, Orion, Loan Origination Systems</li><li>Understanding of Core Banking Systems (Fiserv, Symitar, etc)</li></ul><p>Company DescriptionAt Zennify, we know how to focus, build and balance. We know systems and can untangle even the most complex of technical messes to ensure everything is running in sync. Our expertise in the Salesforce suite of products has helped bring balance to hundreds of clients. We evaluate existing technologies, recommend unique cloud-based solutions and expertly build solutions. We take into account our clients' specific needs as well as their existing infrastructure to develop context laden, elegant solutions. Simply put, Zennify brings competing interests, incompatible systems and seemingly unlinked challenges into alignment to develop technology solutions that drive businesses forward. </p><p>Our team is comprised of gritty, passionate problem-solvers. We have the vision to create lasting, long-term solutions for our clients. Because we view our clients as partners, we're deeply invested in our work and the success of our projects. At Zennify, innovation is in our every breath. We're motivated to increase efficiencies and ultimately help the bottom line of our client's business. We dig deep. Zennify works hard to understand the needs of our clients and align those needs with working, effective solutions.</p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>",
+    "urlFetchPending": false,
+    "published": "May 25, 2018 6:20:41 AM",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ]
+  },
+  {
     "id": "Bq7DywZPQlG8vyxdiscsWQ",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -224,6 +254,42 @@
     ],
     "tagsNames2": [
       "bigdata-ml"
+    ]
+  },
+  {
+    "id": "tdS6SR22Sxmff0vIv1qhuQ",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/octonius/jobs/84686-freelance-hunter-and-gatherer",
+    "title": "Freelance Hunter and Gatherer",
+    "content": "<div><h2>Freelance Hunter and Gatherer at Octonius</h2><div>Europe, France, Spain, Remote · Contract</div><div></div></div><div><div>Skills</div><div>Business Development, Sales, Sales/Marketing and Strategic Partnerships</div><div>Compensation</div><div>$10K–$50K<br>1.0%–2.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>We’re in search of a Freelance Hunter and Gatherer to join our young and creative team and help us reach a new level of revenue growth for the company. You'll be working closely with our Director of Sales. </p><p>You'll lead outbound sales campaigns, research new market segments, propose improvements, report sales metrics and develop leads across relevant markets. Measure sales metrics, adapt, propose solutions and propose ways to improve business and marketing strategy to generate new customers.</p><p>We offer:</p><p>- Ability to work remote.<br>- Great commission/compensation for each closed deal. <br>- Equity incentives for top performers.<br>- Freedom to create your own job. <br>- Successful candidates have an outlook to be contracted full-time in January 2018.</p><p>The ideal candidate:</p><p>- Passionate about sales and business development. <br>- Self-starter.<br>- Deal closer. <br>- Creative ideas for partnerships and B2B sales. <br>- Strong communication skills. <br>- Powerpoint / Keynote &amp; proficient in Google Drive.<br>- Highly enthusiastic, confident and interested in SaaS sales.</p></div>",
+    "urlFetchPending": false,
+    "published": "May 20, 2018 6:04:45 PM",
+    "tags": [
+      "Business Development",
+      "Contract",
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``OR(fulltim,offer) 5W 2N(work,remot)",
+      "Europe",
+      "France",
+      "REMOTE1/50",
+      "Remote OK",
+      "Sales",
+      "Sales/Marketing and Strategic Partnerships",
+      "Spain",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
     ]
   },
   {
@@ -2151,6 +2217,40 @@
     ],
     "tagsNames2": [
       "gamedev"
+    ]
+  },
+  {
+    "id": "9AZ1qlbcQO6cIMl5EG83Rg",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/banian-labs/jobs/127522-date-entry-and-assistant-part-time",
+    "title": "Date Entry and Assistant( Part Time)",
+    "content": "<div><h2>Date Entry and Assistant( Part Time) at Banian Labs</h2><div>Los Angeles, Remote · Contract</div><div></div></div><div><div>Skills</div><div>Office Administration, Executive Assistant, Office Management, Administrative Assistant</div><div>Compensation</div><div>$5K–$20K<br>No Equity</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Position: Data Entry and Assistant <br>Location: Palo Alto or Remote <br>Status: Part Time, 10-15 hours per week <br>Estimated Duration: Ongoing<br>Starts: Within the Week<br>Rate: Up to $10-20/hr DOE</p><p>Job Description:<br>A Saas software company needs junior level -data entry and assistant to join their team!</p><p>You will report to the head of product and marketing to work on lead generations and sales funnels.</p><p>Required: <br>- 1+ years of experience<br>- Experience with Microsoft world and Excel and tech savvy with office software tools. <br>- B2C experience<br>- Adobe Creative Suite is bonus not required.</p><p>10-15 per week, for an ongoing contract. Office is biking distance to California Ave Cal train.</p><p>If you feel you are qualified for this position please reply directly to this email with a link to your profile (Linkedin, Angel List) or  attach your resume. Tell us why you are qualified for this opportunity (2-3 bullet points, including your strengths/skill set as they pertain to this role), and let us know your availability to interview or start.</p></div>",
+    "urlFetchPending": false,
+    "published": "Mar 26, 2018 5:46:17 PM",
+    "tags": [
+      "Administrative Assistant",
+      "Contract",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "Executive Assistant",
+      "Los Angeles",
+      "Office Administration",
+      "Office Management",
+      "Office Manager",
+      "REMOTE1/100",
+      "Remote OK",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
     ]
   }
 ]
